Issue #2019345 by johnv: Added notices in info-file for better usage of submodules.
Issue #2019345 by johnv: Added WorkflowConfigTransition as an Entity for workflow_transitions.
Issue #2019345 by johnv: Fixed delete transitions even when no content is assigned.
Issue #2019345 by johnv: Moved workflow_transitions functions to Workflow(ConfigTransition) classes.
Issue #2163805 by johnv: Added user_access to workflow_revert link, not only page.
Issue #2019345 by johnv: Fixed message on workflow_tab_page.
Issue #2149223 by johnv: Moved code from workflow_allowable_transitions to central Workflow::getTransitions().
Issue #2149223 by johnv: Moved code from workflow_transition_allowed to WorkflowConfigTransition::isAllowed().
Issue #2165179 by colan: Fixed update of workflow_node_history.
Issue #2160375 by Matthijs: Added workflow tab for all entities.
Issue #2112199 by johnv: Fixed messages by PAReview.sh in WorkflowItem.php.
Issue #2149223 by johnv: Moved code from workflow_transition_allowed to WorkflowConfigTransition::isAllowed() -2-.
Issue #2019345 by johnv: Moved code to unify workflow_node and workflow_field.
Issue #2019345 by johnv: Added function workflow_state_load.
Issue #2165703 by Propaganistas, johnv: Fixed strict warnings.
Issue #2166199 by zihong0: Fixed error.
Issue #2166047 by johnv: Fixed error when choosing 'Options' widget directly on field-add page.
Issue #2165807 by dcanetma: Fixed scheduled transitions cron is not working on time basis.
Issue #2019345 by johnv: Fixed messages on workflow settings edit page.
Issue #2064449 by johnv: Changed role ID of 'workflow author' from 'author' to '-1'; 'roles' fields are now serialized.
Issue #2168571 by rv0: Fixed Workflow field required setting is not saved.
Issue #2102765 by johnv: Fixed documentation of hook_workflow_operations.
Issue #2169859 by johnv: Fixed problems with Features.
Issue #2064449 by johnv: Changed hook_update_7007.