@@ -390,3 +390,4 @@ Issue #2168571 by rv0: Fixed Workflow field required setting is not saved.
 Issue #2102765 by johnv: Fixed documentation of hook_workflow_operations.
 Issue #2169859 by johnv: Fixed problems with Features.
 Issue #2064449 by johnv: Changed hook_update_7007.
+Issue #2171615 by Tim-Erwin, johnv: Fixed wrong parsing of hook_workflow results.
